# monokl

./: .gitignore  AGENTS.md  README.md  config.example.yaml  plan.md  pyproject.toml
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json  rename-monocle-to-monokl.md
.planning/debug/: todoist-ui-display.md
.planning/phases/01-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-03-SUMMARY.md
.planning/phases/02-cli-adapters/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/03-dashboard-ui/: 03-02-SUMMARY.md  03-04-PLAN.md  03-04-SUMMARY.md  03-05-PLAN.md  03-dashboard-ui-UAT.md
.planning/phases/04-add-logging/: 04-01-SUMMARY.md
.planning/phases/05-github-integration/: 05-RESEARCH.md
docs/: dashboard-mockup.txt  testing_quality_inventory.md
src/monocle/: __main__.py  config.py  config_models.py  features.py
src/monocle/db/: work_store.py
src/monocle/ui/: app.py  sections.py
src/monocli/: __init__.py  __main__.py  async_utils.py  config.py  config_models.py  exceptions.py  models.py
src/monocli/adapters/: gitlab.py  jira.py
src/monocli/db/: __init__.py  _cache_backend.py  _source_health.py  preferences.py  schema.py  work_store.py
src/monocli/sources/: __init__.py  base.py
src/monocli/ui/: __init__.py  app.py  main_screen.py  sections.py  setup_screen.py  sorting.py  topbar.py  work_store_factory.py
src/monokl/: __init__.py  __main__.py  async_utils.py  config.py  config_models.py  exceptions.py  features.py  keyring_utils.py  logging_config.py  models.py  version.py
src/monokl/db/: __init__.py  _cache_backend.py  _source_health.py  connection.py  preferences.py  schema.py  work_store.py
src/monokl/sources/: __init__.py  _detection.py  base.py  setup.py  (+2 more)
tests/: conftest.py  test_async_utils.py  test_azuredevops_adapter.py  test_config.py  test_detection.py  test_github_adapter.py  test_gitlab_adapter.py  test_jira_adapter.py  test_logging.py  test_models.py  test_version.py  test_work_store_factory.py
tests/db/: test_connection.py  test_preferences.py  test_schema.py  test_work_store.py
tests/integration/: __init__.py  conftest.py  test_error_scenarios.py  test_full_flow.py  test_snapshots.py  test_state_changes.py
tests/support/: factories.py  stubs.py
tests/ui/: test_app.py  test_main_screen.py  test_navigation.py  test_sections.py  test_spinner.py
(+29 files in other folders)
