[project]
name = "monocli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Piotr Grędowski", email = "piotrgredowski@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "textual>=7.5.0",
    "pydantic>=2.12.5",
]

[project.scripts]
monocli = "monocli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"
